# API-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/actions/deploy-to-azure/: action.yml
.github/workflows/: build-docker-image.yml  deploy-staging.yml  deployment.yml  run-tests.yml  spinup-destroy.yml
api/: pyproject.toml
src/: config.py  dependencies.py  exceptions.py  logger.py  main.py  schemas.py
src/modules/: augmentations.py  detector.py  loaders.py  model.py  utils.py
src/routers/: v1.py
static/: swagger-ui.css
tests/: test_example.py
