[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
