[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""    
authors = ["macieopi <macieopi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
pre-commit = "^2.18.1"
black = "^22.3.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
